# Kayrros_Challenge

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  TEST_STRUCTURE.md  api_launch.py  db.py  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: python-tests.yml
api/: ingest.py  models.py
api/routers/: hotspots.py
app/: __init__.py
app/models/: Cluster.py  Hotspot.py
app/routers/: docs.py  hotspots.py
db/schema/: live.sql
ingestion/: clustering.py  ingest.py
scripts/: setup.sh
tests/: sample_firms.csv  test_ingest.py
utils/: __init__.py  schemas.py
