[project]
name = "de-test"
version = "0.1.0"
description = "Testing Data Engineering skills at Kayrros."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.121.0",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.3",
    "pytest>=8.4.2",
    "ruff>=0.14.3",
    "sqlfluff>=3.5.0",
    "sqlmodel>=0.0.27",
    "uvicorn>=0.34.0",
    "pandas>=2.2.0",
    "geoalchemy2>=0.18.0",
    "httpx>=0.28.0",
    "shapely>=2.1.0"

]
